--- a/sala-de-juegos/package.json
+++ b/sala-de-juegos/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@supabase/supabase-js": "^2.49.4",
     "glob": "^11.0.2",
     "rimraf": "^6.0.1",
     "rxjs": "~7.8.0",
