--- a/sala-de-juegos/angular.json
+++ b/sala-de-juegos/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/sala-de-juegos",
+            "outputPath": "dist/sala-de-juegos/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
